# agent-financials

./: .env.example  app.py  client.py  pyproject.toml
.github/workflows/: deploy.yml  sync-sdk.yml  update-sdk.yml
a2a/: agent_card.py
a2a_service/: agent_card.py  executor.py  server.py
agents/: agent.py
database/: auth.py  memory.py  mongo.py  profile.py
tools/: db_tools.py  firecrawl_tool.py  investment_report.py  tavily_tool.py  yfinance_tool.py
