[project]
name = "agent-financials"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "motor (>=3.7.1,<4.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "mem0ai (>=1.0.5,<2.0.0)",
    "a2a-sdk (>=0.2.0)",
    "langchain-mcp-adapters (>=0.1.0)",
    "langgraph-checkpoint-mongodb (>=0.3.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
agent-sdk = { path = "./agent-sdk", develop = true }
